feat: 新增日志包装器