@@ -1,9 +1,8 @@
 package com.izhimu.seas.generate.db.engine;
 
-import cn.hutool.core.util.StrUtil;
-import com.izhimu.seas.core.utils.LogUtil;
+import cn.hutool.core.text.CharSequenceUtil;
+import com.izhimu.seas.core.log.LogWrapper;
 import com.izhimu.seas.generate.db.exception.DbEngineException;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.jdbc.core.JdbcTemplate;
 
 import java.util.ArrayList;
@@ -17,8 +16,9 @@ import java.util.Objects;
  * @author Haoran
  * @version v1.0
  */
-@Slf4j
 public class PostgreEngine extends AbstractDbEngine {
+
+    private static final LogWrapper log = LogWrapper.build("PostgreEngine");
 
     PostgreEngine(JdbcTemplate jdbcTemplate) {
         this.jdbcTemplate = jdbcTemplate;
@@ -39,7 +39,7 @@ public class PostgreEngine extends AbstractDbEngine {
     @Override
     public List<String> getTableList(String like) {
         StringBuilder sql = new StringBuilder("SELECT tablename FROM pg_tables WHERE schemaname NOT IN ('pg_catalog','information_schema')");
-        if (Objects.nonNull(like) && StrUtil.isNotBlank(like.trim())) {
+        if (Objects.nonNull(like) && CharSequenceUtil.isNotBlank(like.trim())) {
             sql.append(" AND tablename LIKE ").append("'%");
             sql.append(like).append("%'");
         }
@@ -51,7 +51,7 @@ public class PostgreEngine extends AbstractDbEngine {
                 resultTable.add(tableName.toLowerCase());
             }
         } catch (Exception e) {
-            log.error(LogUtil.format("DbEngine", "postgres get tables error"), e);
+            log.error(e);
         }
         return resultTable;
     }
@@ -69,7 +69,7 @@ public class PostgreEngine extends AbstractDbEngine {
             fieldList = this.jdbcTemplate.queryForList(sql);
             nullFormat(fieldList);
         } catch (Exception e) {
-            log.error(LogUtil.format("DbEngine", "postgres get table field error"), e);
+            log.error(e);
         }
         return fieldList;
     }
@@ -86,10 +86,10 @@ public class PostgreEngine extends AbstractDbEngine {
         try {
             List<Map<String, Object>> fieldList = this.jdbcTemplate.queryForList(sql);
             if (!fieldList.isEmpty()) {
-                comment = (String) fieldList.get(0).get("comment");
+                comment = (String) fieldList.getFirst().get("comment");
             }
         } catch (Exception e) {
-            log.error(LogUtil.format("DbEngine", "postgres get table comment error"), e);
+            log.error(e);
         }
         return comment;
     }
